--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-hibernate-orm-panache</artifactId>
+			<artifactId>quarkus-spring-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
